--- a/.asf.yaml
+++ b/.asf.yaml
@@ -9,3 +9,7 @@ github:
     - lucene
     - website
     - pelican
+  enabled_merge_buttons:
+    squash: true
+    merge:  false
+    rebase: false
