--- a/themes/solr/templates/htaccess.template
+++ b/themes/solr/templates/htaccess.template
@@ -30,15 +30,20 @@ RedirectMatch Permanent ^/solr/doap.rdf https://gitbox.apache.org/repos/asf?p=so
 
 # Solr site redesign
 # needs to use mod_rewrite because of the anchor fragments
-RewriteRule ^solr/books.html resources.html#solr-books                      [R=301,NE,L]
-RewriteRule ^solr/discussion.html resources.html#community                  [R=301,NE,L]
-RewriteRule ^solr/documentation.html resources.html#documentation           [R=301,NE,L]
-RewriteRule ^solr/screenshots.html features.html                            [R=301,NE,L]
-RewriteRule ^solr/solrnews.html news.html                                   [R=301,NE,L]
-RewriteRule ^solr/tutorial.html resources.html#tutorials                    [R=301,NE,L]
-RewriteRule ^solr/versioncontrol.html resources.html#solr-version-control   [R=301,NE,L]
-RewriteRule ^solr/version_control.html resources.html#solr-version-control  [R=301,NE,L]
-RewriteRule ^solr/mailing_lists.html resources.html#community               [R=301,NE,L]
+RewriteRule ^books.html resources.html#solr-books                      [R=301,NE,L]
+RewriteRule ^discussion.html community.html#mailing-lists-chat         [R=301,NE,L]
+RewriteRule ^documentation.html resources.html#documentation           [R=301,NE,L]
+RewriteRule ^screenshots.html features.html                            [R=301,NE,L]
+RewriteRule ^solrnews.html news.html                                   [R=301,NE,L]
+RewriteRule ^tutorial.html resources.html#tutorials                    [R=301,NE,L]
+RewriteRule ^versioncontrol.html resources.html#solr-version-control   [R=301,NE,L]
+RewriteRule ^version_control.html resources.html#solr-version-control  [R=301,NE,L]
+RewriteRule ^mailing_lists.html community.html#mailing-lists-chat      [R=301,NE,L]
+
+RedirectMatch Permanent ^issue_tracking.html https://issues.apache.org/jira/browse/SOLR
+RedirectMatch Permanent ^mirrors-solr-latest-redir.html downloads.html
+RedirectMatch Permanent ^mirrors-solr-3x-redir downloads.html
+RedirectMatch Permanent ^mirrors-solr-redir.html downloads.html
 
 # Simple redirect to "directory", so later rules match
 RedirectMatch temp ^/(core|solr)/api$ $0/
