--- a/themes/lucene/templates/htaccess.template
+++ b/themes/lucene/templates/htaccess.template
@@ -100,6 +100,8 @@ RedirectMatch temp ^/solr/api/org/(.*) https://solr.apache.org/api/org/$1
 RedirectMatch temp ^/solr/api/(.*) https://solr.apache.org/api/$1
 RedirectMatch Permanent ^/solr/4_0_0-(ALPHA|BETA)(.*) https://solr.apache.org/docs/4_0_0/$2
 RedirectMatch Permanent ^/solr/api-(.*) https://solr.apache.org/docs/$1
+RedirectMatch Permanent ^feeds/solr/news.atom.xml https://solr.apache.org/feeds/solr/news.atom.xml
+RedirectMatch Permanent ^feeds/solr/security.atom.xml https://solr.apache.org/feeds/solr/security.atom.xml
 # Fallback redirect for anythin not caught above
 RedirectMatch Permanent ^/solr/(.*)$ https://solr.apache.org/$1
 
