Fix/revert accidentally merged .asf.yaml

--- a/.asf.yaml
+++ b/.asf.yaml
@@ -1,9 +1,8 @@
 pelican:
-  whoami: main
-  target: asf-staging
-
-staging:
-  whoami: asf-staging
+  whoami: production
+  target: asf-site
+publish:
+  whoami: asf-site
 
 github:
   labels:
